# PicoLimbo

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml  flake.nix  package-lock.json  server.toml
.github/workflows/: ci.yml  release.yaml  release.yml
binaries/pico_limbo/: Cargo.toml
binaries/pico_limbo/src/: main.rs  server_state.rs
crates/blocks_report/: Cargo.toml
crates/blocks_report/src/: block_state_builder.rs  lib.rs  main.rs
crates/blocks_report_data/: Cargo.toml
crates/blocks_report_data/src/: block_state.rs  block_state_builder.rs  build_report_mappings.rs  internal_mapping.rs  lib.rs  report_mapping.rs
crates/macros/src/: packet_reports.rs
crates/minecraft_packets/: Cargo.toml
crates/minecraft_protocol/: Cargo.toml
crates/minecraft_protocol/src/: lib.rs  protocol_version.rs  state.rs
crates/net/: Cargo.toml
crates/net/src/: get_packet_length.rs  packet_stream.rs  raw_packet.rs
crates/pico_binutils/: Cargo.toml
crates/pico_binutils/src/: binary_reader.rs  binary_writer.rs  var_int.rs
crates/pico_codegen/: Cargo.toml
crates/pico_codegen/src/: binary_reader.rs  binary_writer.rs  lib.rs  var_int.rs
crates/pico_nbt/: Cargo.toml
crates/pico_nbt/benches/: pico_nbt_to_bytes.rs
crates/pico_nbt/src/: binary_reader.rs  lib.rs  nbt.rs  nbt_from_bytes.rs
crates/pico_structures/: Cargo.toml  build.rs
crates/pico_structures/src/: blocks_report.rs  chunk_processor.rs  internal_block_entity.rs  lib.rs  palette.rs  palette_translator.rs  schematic.rs  schematic_file.rs  search_block_state.rs  structure.rs  world.rs
crates/pico_structures/src/block_entities/: generic.rs  mod.rs  sign.rs
crates/pico_text_component/: Cargo.toml
crates/pico_text_component/src/: component.rs
crates/protocol_version/: Cargo.toml
crates/protocol_version/src/: protocol_version.rs
crates/protocol_version_macro/: Cargo.toml
crates/protocol_version_macro/src/: expand.rs  parsed_variant.rs  pvn_attribute.rs
crates/protocol_version_macro/tests/: protocol_version_test.rs
crates/registries_test/: Cargo.toml
crates/registries_test/src/: main.rs  registries_report.rs  registry_data.rs  registry_keys.rs
crates/registries_test/src/data/: mod.rs  registry.rs  registry_entry.rs  registry_entry_value.rs  registry_key.rs  registry_manager.rs  tag.rs
data/generator/: Cargo.toml  FORMATS.md
data/generator/src/: download_server_jars.rs  main.rs
data/src/: generate.ts
data/structures/: entrance  plains_small_house_1
docker/: Dockerfile  Dockerfile.ci
docs/: index.md
docs/.vitepress/: config.mts
docs/about/: cli-usage.md  community-projects.md  comparison.md  faq.md  installation.md  introduction.md  supported-versions.md
docs/config/: boss-bar.md  commands.md  compression.md  connection.md  default-configuration.md  experimental-world.md  fly.md  introduction.md  overrides.md  pick_item.md  proxy-integration.md  schematic-loading.md  server-list.md  server-settings.md  tab-list.md  title.md  world.md
docs/tutorials/: fallback-server.md  schematic-conversion.md
docs/updates/: v1.6.0.md
java_wrapper/: .gitignore  gradle.properties  settings.gradle.kts
java_wrapper/gradle/: libs.versions.toml
java_wrapper/wrapper/: build.gradle.kts
libraries/data_types/: Cargo.toml
libraries/macro_traits/: Cargo.toml
libraries/minecraft_packets/: Cargo.toml
libraries/minecraft_packets/src/: lib.rs
libraries/minecraft_packets/src/configuration/: acknowledge_finish_configuration_packet.rs  client_bound_known_packs_packet.rs  client_bound_plugin_message_packet.rs  client_known_packs_packet.rs  finish_configuration_packet.rs  registry_data_packet.rs  server_bound_information_packet.rs  server_bound_plugin_message_packet.rs  server_links_packet.rs
libraries/minecraft_packets/src/configuration/data/: known_pack.rs  registry_entry.rs  server_link_label.rs
libraries/minecraft_packets/src/handshaking/: handshake_packet.rs  mod.rs
libraries/minecraft_packets/src/handshaking/data/: state.rs
libraries/minecraft_packets/src/login/: login_acknowledged_packet.rs  login_start_packet.rs  login_success_packet.rs  mod.rs
libraries/minecraft_packets/src/play/: chunk_data_and_update_light_packet.rs  client_bound_keep_alive_packet.rs  client_tick_end_packet.rs  game_event_packet.rs  login_packet.rs  server_bound_keep_alive_packet.rs  set_player_position_packet.rs  synchronize_player_position_packet.rs
libraries/minecraft_packets/src/play/data/: chunk_section.rs  palette_container.rs
libraries/minecraft_packets/src/status/: ping_request_packet.rs  ping_response_packet.rs  status_request_packet.rs  status_response_packet.rs
libraries/minecraft_packets/src/status/data/: status_response.rs
libraries/packet_serializer/: Cargo.toml
libraries/protocol/: Cargo.toml
libraries/protocol/src/: lib.rs
libraries/protocol/src/data_types/: identifier.rs  length_padded_vec.rs  mod.rs  optional.rs  position.rs  string.rs  uuid.rs  var_int.rs
libraries/protocol/src/traits/: decode_packet_field.rs
libraries/protocol_version/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs  packet_id.rs  packet_in.rs  packet_out.rs
nix/: module.nix  package.nix
pico_libraries/pico_nbt/: Cargo.toml
pico_libraries/pico_nbt2/: Cargo.toml  clippy.toml
pico_libraries/pico_nbt2/benches/: pico_nbt2_to_bytes.rs
pico_libraries/pico_nbt2/examples/: json_to_nbt.rs  nbt_to_snbt.rs  schematic.rs  value_de.rs
pico_libraries/pico_nbt2/src/: de.rs  io.rs  lib.rs  reader.rs  ser.rs  value.rs
pico_libraries/pico_nbt2/tests/: api_tests.rs  de.rs  evolution_tests.rs  repro_struct_ser.rs  ser.rs  serde_tests.rs  unit_tests.rs  value_deserialization.rs
pico_libraries/pico_registries/: Cargo.toml
pico_libraries/pico_schematic/: Cargo.toml
pico_limbo/: Cargo.toml
pico_limbo/src/: banner.rs  cli.rs  identifier_utils.rs  lib.rs  main.rs  registries_utils.rs  server_state.rs
pterodactyl/eggs/: egg-pico-limbo--debian.json  egg-pico-limbo.json
server/src/: client.rs  get_packet_length.rs  main.rs  packet_error.rs
(+213 files in other folders)
