[package]
name = "pico_structures"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0"
pico_codegen = { path = "../pico_codegen", features = ["codegen", "string_indexer", "binary_writer"] }
rayon = "1.10"

[dependencies]
nbt = { path = "../pico_nbt" }
thiserror = "2.0"
tracing = "0.1"
pico_codegen = { path = "../pico_codegen" }
