[package]
name = "registries_test"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol_version = { path = "../protocol_version" }
pico_nbt = { path = "../pico_nbt" }
pico_identifier = { git = "https://github.com/Quozul/PicoIdentifier.git", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
