[package]
name = "pico_nbt2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
byteorder = "1.5.0"
flate2 = "1.1.5"
indexmap = { version = "2.12.1", features = ["serde"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Panics and unwraps
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "warn"
