[package]
name = "pico_nbt2"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Panics and unwraps
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "warn"
